glossary of ml terms

--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNk0+cSOqoeeIZeWWtPYss9",
+      "authorship_tag": "ABX9TyOEGAe4rcXnKT6TifO5TR+0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,7 +164,39 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "In reinforcement learning, an *agent* receives information about its environment and learns to choose actions that will maximize some reward. For instance, a neural network that \"looks\" at a video game screen and outputs game actions in order to maximize its score can be trained via reinforcement learning."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SFAE3ZaWfTN0",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Classification and regression glossary\n",
+        "\n",
+        "* Sample or input--One data point that goes into your model.\n",
+        "* Prediction or output-- What comes out of your model.\n",
+        "* Target -- The truth, What your model should ideally have predicted, according to an external source of data.\n",
+        "* Prediction error or loss value-- A measure of the distance between your model's prediction and the target.\n",
+        "* Classes-- A set of possible labels to choose from in a classification problem. For example, when classifying cat and dog pictures, \"dog\" and \"cat\" are the two classes.\n",
+        "* Ground-truth or annotations-- All targets for a dataset, typically collected by humans.\n",
+        "* Binary classification -- A classification task where each input sample should be categorized into two exclusive categories.\n",
+        "* Multiclass classification-- A classification task where each input sample should be categorized into more than two categories: for instance, classifying handwritten digits.\n",
+        "* Multilabel classification-- A classification task where each input sample can be assigned multiple labels. For instances, a given image may contain both a cat and a dog and should be annotated both with the \"cat\" label and the \"dog\" label. The number of labels per image is usually variable.\n",
+        "* Vector regression -- A task where the target is a set of continous values: for example, a continuous vector.\n",
+        "* Mini-batch or batch -- A small set of samples(typically between 8 and 128) that are processed simultaneously by the model."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PlLMjBwwiqmt",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.2 Evaluating machine-learning models"
       ]
     },
     {
