Pseudocode for Hold-out validation

--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEGAe4rcXnKT6TifO5TR+0",
+      "authorship_tag": "ABX9TyMWoJla6yvboIIPOBmSwqj9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -200,17 +200,106 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Pin3RBaiNm0H",
-        "colab_type": "code",
-        "colab": {}
+        "id": "QS5vIsDYlMm5",
+        "colab_type": "text"
       },
       "source": [
-        " "
-      ],
-      "execution_count": null,
-      "outputs": []
+        "* First key problem in machine learning avoid *overfitting*. Or performing better on the training data and stalling on the test data after a few iterations or epochs.\n",
+        "\n",
+        "* Second key problem *generalize* performance on to never before seen data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hR_5aCjGmCAM",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.2.1 Training, validation, and test sets"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TzGf3y7hmLK5",
+        "colab_type": "text"
+      },
+      "source": [
+        "1. Split the data into three sets: training, validation, and test.\n",
+        "2. Train on your training data and evaluate you model on the validation data.\n",
+        "3. Test the model on the test data.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WL8__xbVoncW",
+        "colab_type": "text"
+      },
+      "source": [
+        "The validation set allows us to tune the configuration of our model: choosing the number of layers or size of the layers( *hyperparameters*). Tuning the hyperparameters is a form of *learning*: a search problem for a good configuration in some parameter space. This can result in *overfitting on the validation set*.\n",
+        "\n",
+        "*Information leaks* may take place if you optimize your hyperparameters too much on the validation set as you will expose information to the model that will tune it specifically for performance on the validation set. Not for the test set which we would like to perform well on."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "17KgonHir5i0",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Simple Hold-out validation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tg23zRJasD--",
+        "colab_type": "text"
+      },
+      "source": [
+        "Set apart som"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bib7w7luvgYU",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        " import numpy as np\n",
+        " from keras import models\n",
+        "\n",
+        " num_validation_samples = 10000\n",
+        "\n",
+        " np.random.shuffle(data)\n",
+        "\n",
+        " validation_data = data[:num_validation_samples]\n",
+        " data = data[num_validation_samples:]\n",
+        "\n",
+        " training_data = data[:]\n",
+        "\n",
+        " model = get_model()\n",
+        " model.train(training_data)\n",
+        " validation_score = model.evaluate(validation_data)\n",
+        "\n",
+        " # At this point you can tune your model.\n",
+        " # retrain it, evaluate it, tune it again.\n",
+        "\n",
+        " model = get_model()\n",
+        " model.train(np.concatenate([training_data,\n",
+        "                             validation_data]))\n",
+        " test_score = model.evaluate(test_data)\n",
+        "\n",
+        " ```"
+      ]
     }
   ]
 }
