--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWoJla6yvboIIPOBmSwqj9",
+      "authorship_tag": "ABX9TyP8N0dbvDHPUb8mVJrwtuPL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -263,7 +263,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Set apart som"
+        "Set apart some fraction of your data as your test set. Train on the remaining data, and evauate on the test set."
       ]
     },
     {
@@ -299,6 +299,68 @@
         " test_score = model.evaluate(test_data)\n",
         "\n",
         " ```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J2A_XnnkBVrd",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is the simplest evaluation protocol, and it suffers from one flaw: if little data is available, then your validattion and test sets may contain too few samples to be statistically representative of the data at hand. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V2NhVNpJChyK",
+        "colab_type": "text"
+      },
+      "source": [
+        "# K-FOLD Validation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mpZpT-mRCsCe",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mSM4cTIDCrHd",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "k = 4\n",
+        "num_validation_samples = len(data) // k\n",
+        "\n",
+        "np.random.shuffle(data)\n",
+        "\n",
+        "validation_scores = []\n",
+        "for fold in range(k):\n",
+        "    validation_data = data[num_validation_samples * fold:\n",
+        "    num_validation_samples * (fold + 1)]\n",
+        "    training_data = data[:num_validation_samples * fold] + \n",
+        "    data[num_validation_samples * (fold + 1):]\n",
+        "    model = get_model()\n",
+        "    model.train(training_data)\n",
+        "    validation_score = model.evaluate(validation_data)\n",
+        "    validation_scores.append(validation_score)\n",
+        "validation_score = np.average(validation_scores)\n",
+        "\n",
+        "model = get_model()\n",
+        "model.train(data)\n",
+        "test_score = model.evaluate(test_data)\n",
+        "\n",
+        "```"
       ]
     }
   ]
