--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP8N0dbvDHPUb8mVJrwtuPL",
+      "authorship_tag": "ABX9TyO+o6Bz7muYN51aTF1ayWtC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -328,7 +328,7 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "With this approach, you split your data into K partitions of equal size. For each partition i, train a model on the remaining K-1 partitions, and evaluate it on partition i. Your final score is then the averages of the K scores obtained. This method is helpful when the performance of your model shows significant variance based on your training test split. "
       ]
     },
     {
@@ -361,6 +361,60 @@
         "test_score = model.evaluate(test_data)\n",
         "\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MEsNhRz-F7Nl",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Iterated K-FOLD VALIDATION WITH SHUFFLING"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WeNBPyJtGDUZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "It consists of applying K-fold validation multiple times, shuffing the data every time before splitting it K ways. The final score is the average of the scores obtained at each run of K-fold validation. Note that you end up training and evaluating P X K models(where P is the number of iterations you use), which can be very expensive."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ueJnhVVkG0zn",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.2.2 Things to keep in mind"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8GN4q3jxHF2l",
+        "colab_type": "text"
+      },
+      "source": [
+        "* *Data representiveness*-- You want both your taining set and test set to be representative of the data at hand. For instance, if you're trying to classify images of digits, and you're starting from an array of samples where the samples are ordered by their class, takinge the first 80% of the array as your training set and the remaining 20% as your test set will result in your training set containing only classes 0-7, whereas your test set contatins only classes 8-9. This seems like a ridiculous mistake, but it's surprisingly common. For this reason, you usually should *randomly shuffle* your data before splitting it into training and test sets.\n",
+        "\n",
+        "* *The arrow of time*-- If you're trying to predict the future given the past, you should not randomly shuffle your data before splitting it, because doing so will create a *temporal leak*: your model will effectively be trained on data from the future. In such situations you should always make sure all data in your test set *posterior* to the data in the training set.\n",
+        "\n",
+        "* *Redundancy in your data*-- If some data points in your data appear twice, then shuffling the data and splitting it into a training set and validation set will result in redundacy between the training and validation sets. In effect, you'll be testing on part of your training data, which is the worst thing you can do! Make sure your training set and validation set are disjoint"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ryMAEGudJ8nC",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
