--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO+o6Bz7muYN51aTF1ayWtC",
+      "authorship_tag": "ABX9TyOb8C6TU6FFZwQi6KYCVyqr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -414,7 +414,47 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "#4.3 Data preprocessing, feature engineering, and feature learning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lZwEZz_waz0L",
+        "colab_type": "text"
+      },
+      "source": [
+        "In addition to model evaluation, an important question we must must tackle before we dive deeper into model development is the following: how do you prepare the input data and targets before feeding them into a neural network?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mKeIjrP8jAZ3",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.3.1 Data preprocessing for neural networks\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7QuVgTNnjTCe",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Vectorization"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Nn2j_MSSjXQH",
+        "colab_type": "text"
+      },
+      "source": [
+        "All inputs and targets in a neural network must be tensors of floating-point "
       ]
     }
   ]
