--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOb8C6TU6FFZwQi6KYCVyqr",
+      "authorship_tag": "ABX9TyOu0eqt3uMjEDB1kCyCMAGd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -454,7 +454,98 @@
         "colab_type": "text"
       },
       "source": [
-        "All inputs and targets in a neural network must be tensors of floating-point "
+        "All inputs and targets in a neural network must be tensors of floating-point. Whatever data you need to process you must first turn into tensors, a step called *data vectorization*. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h6JYJyU7orRB",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Value normalization "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t-WM6k44owcx",
+        "colab_type": "text"
+      },
+      "source": [
+        "In general, it isn't safe to feed into a neural network data that takes a relatively large values or data that is heterogeneous. Doing so can trigger large gradient updates that will prevent the network from converging. \n",
+        "\n",
+        "* *Take small values*-- Typically, most values should be in the 0-1 range.\n",
+        "* Be *homogenous*-- That is, all features should take values in roughly the same range.\n",
+        "\n",
+        "* Normalize each feature independently to have a mean of 0.\n",
+        "\n",
+        "* Normalize each feature independently to have a standard deviation of 1."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6ckgtiMjqDw_",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "x -= x.mean(axis=0)\n",
+        "x /= x.std(axis=0)\n",
+        "\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zOBzMhE7qNN0",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Handling Missing values"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KDB6xGo1qSvX",
+        "colab_type": "text"
+      },
+      "source": [
+        "In general, with neural networks, it's safe to input missing values as 0, with the condition that 0 isn't already a meaningful value. The network will learn from exposure to the data that the value 0 means *missing data* and will start ignoring the value."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CwiCtVjyrK-v",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that if you're expecting missing values in the test data, but the network was trained on data without any missing values in the test data, the network won't have learned to ignore missing values!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FXz3f-Irr95G",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.3.2 Feature engineering"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5WNa_-ussEoY",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
