--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOu0eqt3uMjEDB1kCyCMAGd",
+      "authorship_tag": "ABX9TyM8xoly2AIAeC6t23LdmlWC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -545,7 +545,40 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "*Feature engineering* is the process of using your own knowledge about the data and about the machine-learning algorithm at hand to make the algorithm work better by applying hardcoded transformations to the data before it goes into the model.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Pon04DPIvK_Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "The essence of feature engineering is: making a problem easier by expressing it in a simpler way. Requiring some domain knowledge about the problem."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "apVSxMN2vZTl",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Good features still allow you to solve problems more elegantly while using fewer resources. For instance, it would be ridiculous to solve the problem of reading a clock face using a convolutional neural network.\n",
+        "\n",
+        "* Good features let you solve a problem with far less data. The ability of deep-learning models to learn features on their own relies on having lots of training data available; if you have only a few samples, then the information value in their features becomes critical."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KORWbE8dwG6E",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.4 Overfitting and underfitting"
       ]
     }
   ]
