O and U fitting continued

--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM8xoly2AIAeC6t23LdmlWC",
+      "authorship_tag": "ABX9TyMsEFS1j1y5y81zhO8zpIJq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -579,6 +579,58 @@
       },
       "source": [
         "#4.4 Overfitting and underfitting"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5GjntAZKx0dY",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Optimization* refers to the process of adjusting a model to get the best performance possible on the training data (the *learning* in *machine learning*), whereas *generalization* refers to how well the trained model performs on data it has never seen before."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rrZ5qGzbzube",
+        "colab_type": "text"
+      },
+      "source": [
+        "At the beginning of training, optimization and generalization are correlated: the lower the loss on the training data, the lower the loss on test data. While this is happening, your model is said to be *underfit:* there is still progress to be made; the network hasn't yet modeled all revelant patterns in the training data. As training continues, generalization and validation metrics stall while the network learns patterns specific to the training data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TxisCeCy1abQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "To prevent a model from learning misleading or irrelevant patterns found in the training data, *the best solution is to get more training data*. A model trained on more data will naturally generalize better. If a network can only afford to memorize a small number of patterns, the optimization process will force it to focus on the most prominent patterns, which have a better chance of generalizing well.\n",
+        "\n",
+        "The process of fighting overfitting this way is called *reguralization*."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bUB9deuN3EJv",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.4.1 Reducing the network's size"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pxKcwzvn3Ky9",
+        "colab_type": "text"
+      },
+      "source": [
+        "The simplest way to prevent overfitting is to reduce the "
       ]
     }
   ]
