Housing data notes done

--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBdMSrXX+bjQy2LiW2wnYx",
+      "authorship_tag": "ABX9TyMp1K6F9Dyr0UqVkbYH/wS2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -522,7 +522,7 @@
         "\n",
         "(train_data, train_labels),  (test_data, test_labels) = imdb.load_data(num_words=10000)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,15 +551,14 @@
         "id": "R7buJtq6Nmf9",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "2466fd96-0a73-462c-c605-092f1e6c7c93"
       },
       "source": [
         "train_data[0]"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -798,15 +797,14 @@
         "id": "ULKLwbx1Nw18",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "269c2c0c-e449-4899-ef1b-277ef3fbcb86"
       },
       "source": [
         "train_labels[0]"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -828,15 +826,14 @@
         "id": "T48W4vZkN1v7",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "d373279f-1dab-4522-82b2-aedf4ac487fe"
       },
       "source": [
         "max([max(sequence) for sequence in train_data])"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +863,7 @@
         "    [reverse_word_index.get(i - 3, '?') for i in train_data[0]]\n",
         ")"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -920,7 +917,7 @@
         "x_train = vectorize_sequences(train_data)\n",
         "x_test = vectorize_sequences(test_data)"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -939,15 +936,14 @@
         "id": "-fhTr1WzjNWy",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "a08ea904-222e-4bf7-ae01-dc6829687c67"
       },
       "source": [
         "x_train[0]"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -984,7 +980,7 @@
         "y_train = np.array(train_labels).astype('float32')\n",
         "y_test = np.array(test_labels).astype('float32')"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1100,7 +1096,7 @@
         "model.add(layers.Dense(16, activation='relu'))\n",
         "model.add(layers.Dense(1, activation='sigmoid'))"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1135,7 +1131,7 @@
         "              loss='binary_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1171,7 +1167,7 @@
         "y_val = y_train[:10000]\n",
         "partial_y_train = y_train[10000:]"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1190,8 +1186,7 @@
         "id": "FHMJtmMDwlxZ",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "5b7b8ee9-f755-4e9e-ca41-12b6c8756ba9"
       },
@@ -1206,7 +1201,7 @@
         "                    batch_size=512,\n",
         "                    validation_data=(x_val, y_val))"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1267,7 +1262,7 @@
       "source": [
         "history_dict = history.history"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1276,15 +1271,14 @@
         "id": "rNjVs-Nhx-C5",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "61dc8ade-5fbf-4826-cd0e-a2dc8294da8f"
       },
       "source": [
         "history_dict.keys()"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1306,8 +1300,7 @@
         "id": "d_N2-ydXySOX",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "bfc95d67-011f-4197-a126-3561ef6f9531"
       },
@@ -1328,7 +1321,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1351,8 +1344,7 @@
         "id": "tk2DTffsFgKD",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "a11dcb00-9abb-4a46-c910-1081869214c4"
       },
@@ -1370,7 +1362,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1403,8 +1395,7 @@
         "id": "PENFbec5H9Mz",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "7230c9c4-0e05-4a66-8f4c-59738038bdc9"
       },
@@ -1421,7 +1412,7 @@
         "model.fit(x_train, y_train, epochs=4, batch_size=512)\n",
         "results = model.evaluate(x_test, y_test)"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1446,15 +1437,14 @@
         "id": "otCaBDX6JfpK",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "e6bc88be-6604-4f85-b160-fecfa80846e2"
       },
       "source": [
         "results"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1506,15 +1496,14 @@
         "id": "E6u3rLulUYpo",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "afa3734d-844d-45c8-e1a0-eadf18ddf027"
       },
       "source": [
         "model.predict(x_test)"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1638,7 +1627,7 @@
         "\n",
         "(train_data, train_labels), (test_data, test_labels) = reuters.load_data(num_words=10000)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1657,15 +1646,14 @@
         "id": "IXYgx7fiyYTo",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "009b923b-ac13-4b2b-909e-dcc6b3f4f22b"
       },
       "source": [
         "len(train_data)"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1687,15 +1675,14 @@
         "id": "dtozn2-EycsB",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "4f41b62c-6e5b-484d-f804-463887d4fbca"
       },
       "source": [
         "len(test_data)"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1727,15 +1714,14 @@
         "id": "FUTFyQYMynuv",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "660f7d4b-e162-4fb9-f823-b3d95ae43d74"
       },
       "source": [
         "train_data[10]"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1793,7 +1779,7 @@
         "reverse_word_index = dict([value, key ] for (key, value) in word_index.items())\n",
         "decoded_newswire = ' '.join([reverse_word_index.get(i - 3, '?') for i in train_data[0]])"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1802,15 +1788,14 @@
         "id": "M5kqBvLrzvjC",
         "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "f705e269-666e-4bf5-9083-8f6cabbb4a02"
       },
       "source": [
         "train_labels[10]"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1865,7 +1850,7 @@
         "x_train = vectorize_sequences(train_data)\n",
         "x_test = vectorize_sequences(test_data)"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1895,7 +1880,7 @@
         "one_hot_train_labels = to_one_hot(train_labels)\n",
         "one_hot_test_labels = to_one_hot(train_labels)"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1970,7 +1955,7 @@
         "model.add(layers.Dense(64, activation='relu'))\n",
         "model.add(layers.Dense(46, activation='softmax'))\n"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2006,7 +1991,7 @@
         "              loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2043,7 +2028,7 @@
         "y_val = one_hot_train_labels[:1000]\n",
         "partial_y_train = one_hot_train_labels[1000:]"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2074,7 +2059,7 @@
         "                    batch_size=512,\n",
         "                    validation_data=(x_val, y_val))"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2153,7 +2138,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2196,7 +2181,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2249,7 +2234,7 @@
         "validation_data=(x_val, y_val))\n",
         "results = model.evaluate(x_test, one_hot_test_labels)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2422,7 +2407,7 @@
         "\n",
         "(train_data, train_targets), (test_data, test_targets) = boston_housing.load_data()"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2449,7 +2434,7 @@
       "source": [
         "train_data.shape"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2479,7 +2464,7 @@
       "source": [
         "test_data.shape"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2529,7 +2514,7 @@
       "source": [
         "train_targets"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2609,7 +2594,7 @@
         "test_data -= mean\n",
         "test_data /= std"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2642,7 +2627,7 @@
         "    model.compile(optimizer='rmsprop', loss='mse', metrics=['mae'])\n",
         "    return model\n"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2693,7 +2678,7 @@
         "    val_mse, val_mae = model.evaluate(val_data, val_targets, verbose=0)\n",
         "    all_scores.append(val_mae)\n"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2722,7 +2707,7 @@
         "all_scores\n",
         "np.mean(all_scores)"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2776,7 +2761,7 @@
         "    mae_history = history.history['mae']\n",
         "    all_mae_histories.append(mae_history)\n"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2879,7 +2864,7 @@
         "          epochs=80, batch_size=16, verbose=0)\n",
         "test_mse_score, test_mae_score = model.evaluate(test_data, test_targets)"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2914,7 +2899,7 @@
       "source": [
         "test_mae_score"
       ],
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2957,7 +2942,11 @@
         "colab_type": "text"
       },
       "source": [
-        "fill in notes here and section on boston model performance"
+        "* Regression is done using different loss functions than what we used for classification. Mean squared error (MSE) is a loss function commonly used for regression.\n",
+        "* Similarly, evaluation metrics to be used for regression differ from those used for classification; naturally, the concept for accuracy doesn't apply for regression. A common regression metric is mean absolute error (MAE)\n",
+        "* When features in the input data have values in different ranges, each feature should be scaled independently as a preprocessing step.\n",
+        "* When there is little data available, using K-fold validation is a great way to reliably evaluate a model.\n",
+        "* When little training data is available, it's preferable to use a small network with few hidden layers, in order to avoid severe overfitting."
       ]
     }
   ]
