Revisit broken code later

--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMp1K6F9Dyr0UqVkbYH/wS2",
+      "authorship_tag": "ABX9TyNsP3eQF2wT0UqFLsAPcCz/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2353,6 +2353,53 @@
         "* to do \n",
         "* fill in remaining sections\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kqoew55hZ_JZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.5.8 Further experiments \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SX88BNeiavde",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Try using larger or smaller layers: 32 units, 128 units, and so on.\n",
+        "* You used two hidden layers. Now try using a single hidden layerm or three hidden layers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Sgj7QzvZbAx5",
+        "colab_type": "text"
+      },
+      "source": [
+        "#3.5.9 Wrapping up "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GovUrnS6bNYx",
+        "colab_type": "text"
+      },
+      "source": [
+        "* If you're to classify data points ammong N classes, your netwrok should end with a Dense layer of size N.\n",
+        "* In a single-label, multiclass classification problem, your network should end with a softmaxx activation so that it will output a probability distribution over the N output classes.\n",
+        "* Categorical crossentropy is almost always the loss function you should use for such problems. It minimizes the distance between the probability distributions output by the network and true distribution of the targets.\n",
+        "* There are two ways to handle labels in multiclass classification:\n",
+        "  1. Encoding the labels via categorical encoding and using categorical_crossentropy as a loss function.\n",
+        "  2. Encoding the labels as integers and using the sparse_categorical_crossentropy loss function\n",
+        "* If you need to classify data into a large number of categories, you should avoid creating information bottlenecks in your network due to intermediate layers that are too small."
       ]
     },
     {
