--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNpMvU8BGWBkawZld8mcsZz",
+      "authorship_tag": "ABX9TyP5iopVFYuriF8+zEPwM7F+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -659,7 +659,7 @@
         "model.add(layers.Dense(16, activation='relu'))\n",
         "model.add(layers.Dense(1, activation='sigmoid'))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -689,7 +689,7 @@
         "model.add(layers.Dense(4, activation='relu'))\n",
         "model.add(layers.Dense(1, activation='sigmoid'))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -711,7 +711,7 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "The smaller network starts overfitting later than the reference network, and its performance degrads more slowly once it starts overfitting."
       ]
     }
   ]
