Added note to revisit later

--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP5iopVFYuriF8+zEPwM7F+",
+      "authorship_tag": "ABX9TyNdUW0s3gnpEdLG1UDYvHAO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,16 @@
       },
       "source": [
         "In the previous examples, we covered: binary classification, multiclass classification, and scalar regression. All three fall under *supervised learning*, where the goal is to learn the relationship between training inputs and training targets."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WTSXt0u0Vbk4",
+        "colab_type": "text"
+      },
+      "source": [
+        "* consider going back and using TeX for math expressions"
       ]
     },
     {
